<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivitiy">


    <EditText
        android:id="@+id/userName2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/userName3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/userName6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toTopOf="@+id/nexBt"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/userName4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/userName5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/userName3"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/userName2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/confirm_pas"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/userName5"
        app:layout_constraintStart_toStartOf="@+id/userName5"
        app:layout_constraintTop_toBottomOf="@+id/userName4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/referral_code"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/userName6"
        app:layout_constraintStart_toStartOf="@+id/userName6"
        app:layout_constraintTop_toBottomOf="@+id/userName5" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/userName"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/dataOfBirth"
        app:layout_constraintStart_toStartOf="@+id/dataOfBirth"
        app:layout_constraintTop_toBottomOf="@+id/Name" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/userName4"
        app:layout_constraintStart_toStartOf="@+id/userName4"
        app:layout_constraintTop_toBottomOf="@+id/userName3" />

    <ImageButton
        android:id="@+id/back_bt"
        android:layout_width="31dp"
        android:layout_height="33dp"
        android:src="@drawable/back_arrow"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Mobile"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/userName2"
        app:layout_constraintStart_toStartOf="@+id/userName2"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.5"

        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/text1"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/Name"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/back_bt" />

    <EditText
        android:id="@+id/Name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:background="@drawable/input_background"
        android:ems="10"
        android:inputType="textPersonName"
        android:paddingVertical="8dp"

        app:layout_constraintBottom_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.5"

        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/name"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_of_birth"
        android:textColor="@color/black"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/userName"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/dataOfBirth" />

    <Button
        android:id="@+id/nexBt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/login_shap"
        android:paddingHorizontal="25dp"
        android:paddingVertical="10dp"
        android:shadowColor="@android:color/transparent"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="normal"
        app:backgroundTint="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/userName6" />

    <EditText
        android:id="@+id/dataOfBirth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:background="@drawable/input_background"
        android:ems="10"
        android:inputType="number"
        android:paddingVertical="8dp"

        app:layout_constraintBottom_toTopOf="@+id/text1"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.5"

        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

</androidx.constraintlayout.widget.ConstraintLayout>